force-app/main/default/objects/Inspection_Form__c/Inspection_Form__c.object-meta.xml
<CustomObject>
    <label>Inspection Form</label>
    <nameField>
        <displayFormat>I-{00000}</displayFormat>
        <label>Inspection Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>