force-app/main/default/objects/Inspection_Form__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inspection Forms</relationshipLabel>
    <relationshipName>Inspection_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>