force-app/main/default/objects/Inspection_Form__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Make__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Honeywell HN101</fullName>
            </value>
            <value>
                <fullName>Honeywell HN201</fullName>
            </value>
            <value>
                <fullName>Honeywell HN301</fullName>
            </value>
            <value>
                <fullName>Delta DT101</fullName>
            </value>
            <value>
                <fullName>Delta DT201</fullName>
            </value>
            <value>
                <fullName>Delta DT301</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>