force-app/main/default/objects/Inspection_Form__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Inspection Forms</relationshipLabel>
    <relationshipName>Inspection_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>