force-app/main/default/objects/Inspection_Form__c/fields/TemplateId__c.field-meta.xml
<CustomField>
    <fullName>TemplateId__c</fullName>
    <formula>if(Amount__c&gt;10000, &#39;1f3b631f-3f11-4c03-8fc1-6bd78087bb82&#39; , &#39;4a9d3196-83f4-4f8f-ba35-8e1c7ac71799&#39;)</formula>
    <label>TemplateId</label>
    <type>Text</type>
</CustomField>